# infinimap

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
docs/: BUILD.md  README.md  mvp-backlog-github-issues.md
docs/architecture/: data-model.md  generation-pipeline.md  modules.md  overview.md
docs/planning/: mvp.md  post-mvp.md
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/core/world/: world_state.cpp  world_state.h
